--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,23 @@
-name: AWS Deploy
+name: test
+
 on:
   push:
-    branches:
-      - test
 
 env:
-  AWS_ROLE_ARN: arn:aws:iam::533765226298:role/TerraCICDOIDCRole
+  AWS_ROLE_ARN: ${{ secrets.AWS_OIDC_ROLE_ARN }}
 
-permissions:
+permissions:  
   id-token: write
   contents: read
+
 jobs:
-  aws-deploy:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: aws-actions/configure-aws-credentials@v1
+      - name: configure aws credential
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: ${{ env.AWS_ROLE_ARN }}
           aws-region: ap-northeast-1
-      - run: aws sts get-caller-identity
+      - name: OIDC test
+        run: aws s3 ls
