--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,6 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: ${{ env.AWS_ROLE_ARN }}
-          aws-region: ap-northeast-1
+          aws-region: 'us-east-1'
       - name: OIDC test
         run: aws s3 ls
