--- a/.github/workflows/OIDC_test.yml
+++ b/.github/workflows/OIDC_test.yml
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: configure aws credential
         uses: aws-actions/configure-aws-credentials@v4
