--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,11 @@ on:
 env:
   AWS_ROLE_ARN: ${{ secrets.AWS_OIDC_ROLE_ARN }}
 
+permissions:
+  id-token: write
+  contents: read
+  pull-requests: write
+
 jobs:
   provision-ec2:
     runs-on: self-hosted
