--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,15 @@ permissions:
   contents: read
   pull-requests: write
 
+strategy:
+  matrix:
+    directory:
+      - tf-example
+      
+defaults:
+  run:
+    working-directory: ${{ matrix.directory }}
+    
 jobs:
   provision-ec2:
     runs-on: self-hosted
