--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -12,8 +12,8 @@ permissions:
   pull-requests: write
 
 env:
-  ROLE_TO_ASSUME: arn:aws:iam::<アカウントID>:role/<GitHub Actions用のIAMロール名>
-  AWS_REGION: ap-northeast-1
+  ROLE_TO_ASSUME: ${{ secrets.AWS_OIDC_ROLE_ARN }}
+  AWS_REGION: us-east-1
 
 jobs:
   opentofu:
