--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -12,7 +12,7 @@ permissions:
   pull-requests: write
 
 env:
-  ROLE_TO_ASSUME: ${{ secrets.AWS_OIDC_ROLE_ARN }}
+  AWS_ROLE_ARN: ${{ secrets.AWS_OIDC_ROLE_ARN }}
   AWS_REGION: us-east-1
 
 jobs:
@@ -22,7 +22,7 @@ jobs:
     strategy:
       matrix:
         directory:
-          - "inra/ec2"  # ← Terraformコードのあるディレクトリを列挙
+          - "infra/ec2"  # ← Terraformコードのあるディレクトリを列挙
           
     defaults:
       run:
