--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,7 @@ jobs:
       - name: configure aws credential
         uses: aws-actions/configure-aws-credentials@v4
         with:
+          aws-region: us-east-1
           role-to-assume: ${{ env.AWS_ROLE_ARN }}
         
       - name: Opentofu Init
