--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -1,32 +1,11 @@
-name: test
-
-on:
-  push:
-    branches:
-      - "main"
-
-env:
-  AWS_ROLE_ARN: ${{ secrets.AWS_OIDC_ROLE_ARN }}
-
-permissions:  
-  id-token: write
-  contents: read
-
 jobs:
-  test:
+  build:
     runs-on: self-hosted
     steps:
-      - name: configure aws credential
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-region: us-east-1
-          role-to-assume: ${{ env.AWS_ROLE_ARN }}
-        
-      - name: Opentofu Init
-        run: tofu init
-        working-directory: infra
+      - name: Clean workspace
+        run: |
+          echo "Cleaning workspace..."
+          rm -rf * .[^.] .??*
       
-      - name: Terraform Apply
-        run: tofu apply -auto-approve
-        working-directory: infra
-
+      - name: Checkout code
+        uses: actions/checkout@v4
