--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -2,8 +2,10 @@ name: test
 
 on:
   push:
+    paths:
+      - 'infra/**'
     branches:
-      - "main"
+      - main
 
 env:
   AWS_ROLE_ARN: ${{ secrets.AWS_OIDC_ROLE_ARN }}
@@ -15,17 +17,17 @@ permissions:
 jobs:
   test:
     runs-on: self-hosted
+
+    defaults:
+      run:
+        working-directory: infra
+        
     steps:
       - name: configure aws credential
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: us-east-1
           role-to-assume: ${{ env.AWS_ROLE_ARN }}
-          
-      - name: run opentofu
-        uses: opentofu/setup-opentofu@v1
-        with:
-          tofu_version: 1.9.0
         
       - name: Opentofu Init
         run: tofu init
