--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -5,7 +5,10 @@ on:
     branches:
       - main
     paths:
-      - "infra"
+      - "infra/**"
+defaults:
+  run:
+    working-directory: infra
 
 env:
   AWS_ROLE_ARN: ${{ secrets.AWS_OIDC_ROLE_ARN }}
