--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -5,10 +5,10 @@ on:
     branches:
       - main
     paths:
-      - "infra/**"
+      - "infrastructure/**"
 defaults:
   run:
-    working-directory: infra
+    working-directory: infrastructure
 
 env:
   AWS_ROLE_ARN: ${{ secrets.AWS_OIDC_ROLE_ARN }}
