--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -20,6 +20,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ env.AWS_ROLE_ARN }}
+          aws-region: us-east-1
         
       - name: Opentofu Init
         run: tofu init
