--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -18,6 +18,9 @@ jobs:
     runs-on: self-hosted
     
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: configure aws credential
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -26,12 +29,9 @@ jobs:
         
       - name: Opentofu Init
         run: tofu init
-        working-directory: ${{ github.workspace }}
 
       - name: Opentofu Plan
         run: tofu plan
-        working-directory: ${{ github.workspace }}
       
       - name: Opentofu Apply
         run: tofu apply -auto-approve
-        working-directory: ${{ github.workspace }}
