--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -60,17 +60,15 @@ jobs:
 #### Plan: \`${{ steps.plan.outcome }}\`
 #### Validation: \`${{ steps.validate.outcome }}\`
 
-<details><summary>Show Plan</summary>
+            <details><summary>Show Plan</summary>
 
-\`\`\`
-${process.env.PLAN}
-\`\`\`
+            \`\`\`${process.env.PLAN}\`\`\`
 
-</details>`;
+            </details>`;
 
             github.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: output
-            });
+            })
