--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -25,7 +25,7 @@ jobs:
       matrix:
         directory:
           [
-            staging
+            Tofu-aws/staging
           ]
     defaults:
       run:
