--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         directory:
           [
-            staging
+            Tofu-aws/staging
           ]
           
     defaults:
