--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -25,15 +25,13 @@ jobs:
       matrix:
         directory:
           [
-            Tofu-aws/staging
+            "Tofu-aws/staging"
           ]
-    defaults:
-      run:
-        working-directory: ${{ matrix.directory }}
 
     defaults:
       run:
         shell: bash
+        working-directory: ${{ matrix.directory }}
 
     steps:
       - name: Check out repository code
