--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -25,7 +25,7 @@ jobs:
       matrix:
         directory:
           [
-            "Tofu-aws/staging"
+            "staging"
           ]
 
     defaults:
