--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         directory:
           [
-            "Tofu-aws/staging"
+            "staging"
           ]
 
     defaults:
