--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -80,11 +80,9 @@ jobs:
 
             <details><summary>Show Plan</summary>
 
-            \`\`\`
-            ${process.env.PLAN}
-            \`\`\`
+            \`\`\`${process.env.PLAN}\`\`\`
 
-            </details>
+            </details>`;
 
             *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ matrix.directory }}\`, Workflow: \`${{ github.workflow }}\`*`;
 
@@ -93,4 +91,4 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 body: output
-            });
+            })
