--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -1,4 +1,4 @@
-name: Workflow for Opentofu Plan
+name: Workflow for OpenTofu Plan
 
 on:
   pull_request:
@@ -16,15 +16,12 @@ permissions:
   pull-requests: write
 
 jobs:
-  OpenTofu_plan_and_Comment:
+  opentofu_plan_and_comment:
     runs-on: self-hosted
 
     strategy:
       matrix:
-        directory:
-          [
-            "Tofu"
-          ]
+        directory: ["Tofu"]
 
     defaults:
       run:
@@ -41,54 +38,54 @@ jobs:
           role-to-assume: ${{ env.AWS_ROLE_ARN }}
           aws-region: us-east-1
 
-      - name: Exec OpenTofu fmt check
+      - name: OpenTofu fmt check
         id: fmt
-        working-directory: ${{ matrix.directory }}
         run: tofu fmt -check -recursive
         continue-on-error: true
 
-      - name: Exec OpenTofu init
+      - name: OpenTofu init
         id: init
-        working-directory: ${{ matrix.directory }}
         run: tofu init
 
-      - name: Validate
+      - name: OpenTofu validate
+        id: validate
         run: tofu validate
-        working-directory: ${{ matrix.directory }}
 
-      - name: Exec OpenTofu plan
+      - name: OpenTofu plan
         id: plan
-        working-directory: ${{ matrix.directory }}
         run: |
           set -o pipefail
           output=$(tofu plan 2>&1)
           echo "$output"
-          echo "::set-output name=stdout::$output"
+          # safely expose multi-line output
+          echo "stdout<<EOF" >> "$GITHUB_OUTPUT"
+          echo "$output"        >> "$GITHUB_OUTPUT"
+          echo "EOF"            >> "$GITHUB_OUTPUT"
 
       - name: Comment OpenTofu Plan Result
-        uses: actions/github-script@v4
-        env:
-          PLAN: "opentofu\n${{ steps.plan.outputs.stdout }}"
-
+        uses: actions/github-script@v6
         with:
           script: |
-            const output = `### Opentofu cicd
-            #### Opentofu Format and Style \`${{ steps.fmt.outcome }}\`
-            #### Opentofu Initialization \`${{ steps.init.outcome }}\`
-            #### Opentofu Plan \`${{ steps.plan.outcome }}\`
-            #### Opentofu Validation \`${{ steps.validate.outcome }}\`
+            const output = `### 🛠️ OpenTofu CI/CD Plan Result
 
-            <details><summary>Show Plan</summary>
+#### 🧹 Format and Style: \`${{ steps.fmt.outcome }}\`
+#### 📦 Initialization: \`${{ steps.init.outcome }}\`
+#### 🔍 Validation: \`${{ steps.validate.outcome }}\`
+#### 📋 Plan: \`${{ steps.plan.outcome }}\`
 
-            \`\`\`${process.env.PLAN}\`\`\`
+<details>
+<summary>Show Plan Output</summary>
 
-            </details>`;
+\`\`\`
+${{ steps.plan.outputs.stdout }}
+\`\`\`
+</details>
 
-            *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ matrix.directory }}\`, Workflow: \`${{ github.workflow }}\`*`;
+*Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Directory: \`${{ matrix.directory }}\`, Workflow: \`${{ github.workflow }}\`*`;
 
-            github.rest.issues.createComment({
-                issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                body: output
-            })
+            await github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            });
