--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -61,6 +61,7 @@ jobs:
         working-directory: ${{ matrix.directory }}
         run: |
           set -o pipefail
+          export TOFU_COLORS=never
           output=$(tofu plan 2>&1)
           echo "$output"
           echo "stdout<<EOF" >> $GITHUB_OUTPUT
