--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -17,7 +17,7 @@ permissions:
 
 jobs:
   OpenTofu_plan_and_Comment:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
@@ -34,6 +34,11 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+
+      - name: Set up OpenTofu
+        uses: opentofu/setup-opentofu@v1
+        with:
+          version: latest
 
       - name: Configure AWS credentials using OIDC
         uses: aws-actions/configure-aws-credentials@v4
